<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/transparent"
    android:id="@+id/camera"
    android:layout_height="match_parent"
    android:clickable="true">


    <SurfaceView
        android:id="@+id/camera_surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></SurfaceView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnClose"
        android:background="@android:color/transparent"
        android:text="@string/btn_close_label"
        android:textStyle="bold"
        android:layout_margin="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:id="@+id/btnFlip"
        android:text="@string/btn_flip_label"
        android:textStyle="bold"
        android:layout_margin="5dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:id="@+id/btnGallery"
        android:textStyle="bold"
        android:text="@string/btn_camera_roll_label"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp" />

    <ImageButton
        android:id="@+id/imagebutton_camera"
        style="@style/Widget.AppCompat.Base.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/selector_camera_button"
        android:contentDescription="@string/accessibility_imagebutton_maincamera" />

</RelativeLayout>